[G500600-11] Fixing misaligned component for 42->11, Lan Status into Sys Diagnostics

--- a/src/components/StatusTable/StatusTable.module.scss
+++ b/src/components/StatusTable/StatusTable.module.scss
@@ -64,7 +64,7 @@
   th:first-of-type {
     padding-left: var(--spacing-2);
     text-align: left;
-    width: 70%;
+    width: 65%;
   }
 }
 
